@@ -44,7 +44,8 @@
         <string id="32080">Delete all files if processing fails</string>   
         <string id="32081">Eject inserted medium if job successfull</string>  
         <string id="32082">Use ISO-Files instead of device</string>  
-        <string id="32083">Allways use default directorys to store</string>               
+        <string id="32083">Allways use default directorys to store</string>  
+        <string id="32084">Disable ripping from copy protected dvd's from main-menu</string>       
 
         <!--              --> 
         <!-- Window-Names -->
@@ -195,6 +196,7 @@
         <string id="33234">Please insert empty single-layer-dvd</string> 
         <string id="33235">Please insert empty dual-layer-dvd</string>
         <string id="33236">This menu is only visible if there are any user-functions</string>
+        <string id="33237">Transcoding protected dvd's from main-menu is disabled by configuration</string>
         
         <!--               -->
         <!-- Error         -->
